<resources>
    <string name="app_name">AtmEmpresaConsultoria</string>
    <string name="empresa_detalhe">Sobre a empresa</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_acompanhamentoeprojetos">Acompanhamento e projetos</string>
    <string name="cliente_detalhes">Nossos Clientes</string>
    <string name="texto_sys">Empresa de desenvolvimento de sistemas</string>
    <string name="texto_rsm">Empresa de auditoria</string>
    <string name="contato_detalhes">Contato</string>
</resources>
